# how-to-variant

./: CMakeLists.txt  README.md  optional.cpp  optional.hpp  test_optional.cpp  variant.cpp  variant.hpp  why_optional.cpp
